# space_dock_arm_new

./: README.md
moveit_custom4/: .setup_assistant  CMakeLists.txt  package.xml
moveit_custom4/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  spacearmdfm.srdf  stomp_planning.yaml
moveit_custom4/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  launch_all.sh  motor.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  start_demo.launch  stomp_planning_pipeline.launch.xml
moveit_custom4/scripts/: 111.py  222.py  333.py  444.py  555.py  555_ros.py  Aruco Dist f1 improved.py  Aruco Dist f1 improved_image_break.py  aruco_posi_ros_1.py  braveb.sh  master_control_arm.py  move_grp_flow_finalurdf_ui_integrated.py  move_grp_flow_finalurdf_ui_integrated2.py  move_grp_flow_finalurdf_ui_integrated_1.py  node1.py  node1_removed_viberation.py  node2.py  obj_check_start.sh  obj_check_stop.sh  obj_detection.py  obj_detection_improved.py  start_dock.sh  start_process.sh  start_ui.sh  stop_dock.sh  stop_process.sh  stop_ui.sh  testing.py  testing.sh  testing_2.py  testing_kit.py  vivek.py
space_arm_ui-master/: README.md  arm.html  arm_app.desktop  arm_app.sh
spacearmdfm/: CMakeLists.txt  (+1 more)
(+25 files in other folders)
